# FPGA-SIMD-Sandbox

./: .gitignore  .gitmodules  README.md  build_fpga_emu.sh  build_fpga_hw.sh  kernels.cpp  primitives.hpp
group_count_AVX512/: CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  error_log_AVX512_Versions_SCALE1-1.txt  main  measured_execution_times.txt
group_count_AVX512/src/: LinearProbing_avx512-new.cpp  LinearProbing_avx512.cpp  LinearProbing_avx512.hpp  LinearProbing_scalar.cpp  LinearProbing_scalar.hpp  global_settings.hpp  helper.cpp  helper.hpp  main.cpp
hashing_testing/: .gitignore  CMakeLists.txt  README.md  a.out  build.sh  execute.sh  pull.sh  run_temp.sh
hashing_testing/include/main/: hash_function.hpp  tsl_benchmark.hpp  utility.hpp
hashing_testing/include/main/datagenerator/: data_matrix.hpp  datagen.hpp  datagen_help.hpp  datagenerator.hpp
hashing_testing/include/main/fileio/: file.hpp
hashing_testing/include/operator/: utility.hpp
hashing_testing/include/operator/logical/: group_count.hpp  tsl_group_count_soa.hpp
hashing_testing/include/operator/physical/group_count/chained/: chained.hpp  chained2.hpp
hashing_testing/include/operator/physical/group_count/group_count_handler/: group_count_algorithms.hpp
hashing_testing/include/operator/physical/group_count/lcp/: avx512_gc_aosov_v1.hpp  avx512_gc_aosov_v2.hpp  avx512_gc_aosov_v3.hpp  avx512_gc_aosov_v4.hpp  avx512_gc_soaov_v1.hpp  avx512_gc_soaov_v2.hpp  tsl_gc_lcp_soa.hpp
hashing_testing/include/operator/physical/group_count/lp/: scalar_gc_aos.hpp  scalar_gc_aos_v2.hpp  scalar_gc_soa.hpp
hashing_testing/include/operator/physical/group_count/lp_horizontal/: avx512_gc_aos_v1.hpp  avx512_gc_soa_v1.hpp  avx512_gc_soa_v2.hpp  avx512_gc_soa_v3.hpp  tsl_gc_lp_h_soa.hpp
hashing_testing/include/operator/physical/group_count/lp_vertical/: avx512_gc_aos_conflict_v1.hpp  avx512_gc_soa_conflict_v1.hpp  avx512_gc_soa_conflict_v2.hpp  (+1 more)
hashing_testing/src/: CMakeLists.txt
hashing_testing/src/main/: CMakeLists.txt  datagen.hpp  datagen_help.hpp  datagen_test.cpp  general.hpp  general_testing.cpp  group_count_testing_main.cpp  hash_function.cpp  hash_function.hpp  main.cpp  main_benchmark.cpp  main_collision.cpp  main_datagen_test.cpp  main_tsl_test.cpp  stack_heap.cpp  tsl_benchmark.cpp  utility.hpp
hashing_testing/src/main/benchmark/: CMakeLists.txt  table.cpp  table.hpp
hashing_testing/src/main/datagenerator/: CMakeLists.txt  data_matrix.cpp  datagen.hpp  datagen_help.hpp  datagenerator.cpp  datagenerator_help.cpp
hashing_testing/src/main/fileio/: CMakeLists.txt  file.cpp  file.hpp
hashing_testing/src/operator/: CMakeLists.txt  utility.hpp
hashing_testing/src/operator/logical/: group_count.hpp
hashing_testing/src/operator/physical/group_count/: CMakeLists.txt  avx512_group_count.cpp  avx512_group_count.hpp  avx512_group_count_soa_collision_v1.cpp  avx512_group_count_soa_collision_v1.hpp  avx512_group_count_soa_conflict_v1.cpp  avx512_group_count_soa_conflict_v1.hpp  avx512_group_count_soa_conflict_v2.cpp  avx512_group_count_soa_conflict_v2.hpp  avx512_group_count_soa_v1.cpp  avx512_group_count_soa_v1.hpp  avx512_group_count_soa_v2.cpp  avx512_group_count_soa_v2.hpp  avx512_group_count_soa_v3.cpp  avx512_group_count_soa_v3.hpp  avx512_group_count_soaov_v1.cpp  avx512_group_count_soaov_v1.hpp  avx512_group_count_soaov_v2.cpp  avx512_group_count_soaov_v2.hpp  chained.cpp  chained.hpp  chained2.cpp  chained2.hpp  scalar_group_count.cpp  scalar_group_count.hpp
(+2338 files in other folders)
